--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "clientId": "655775249001873409",
+    "clientId": "828629424823599144",
     "guildId": "749234179841196142",
-	"token": "NjU1Nzc1MjQ5MDAxODczNDA5.GX1oJh.JR-3b6jOqwmOHUg3z5rXEHh7mYWX0M6ux9c1y8"
+    "token": "ODI4NjI5NDI0ODIzNTk5MTQ0.G1tEPM.CQK-5YQF44DFrFUTg9J4stgkaL8OKrZVaAYhZY"
 }
