--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
-  "name": "discordjs",
+  "name": "js-discord",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Macijke",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^14.6.0"
+    "@discordjs/voice": "^0.17.0",
+    "@distube/ytdl-core": "^4.13.4",
+    "discord.js": "^14.15.3",
+    "ffmpeg-static": "^5.2.0",
+    "libsodium-wrappers": "^0.7.13"
   }
 }
