--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
     "clientId": "828629424823599144",
     "guildId": "749234179841196142",
-    "token": "ODI4NjI5NDI0ODIzNTk5MTQ0.G1tEPM.CQK-5YQF44DFrFUTg9J4stgkaL8OKrZVaAYhZY"
+    "token": "ODI4NjI5NDI0ODIzNTk5MTQ0.GjB_6E.W_p-Eo-2pWMhuH_Qhv98Gny38LoIIz0cdGeGTI"
 }
